Add @redcodefinal as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -15,6 +15,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "redcodefinal",
+      "name": "Ian Rash",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1298501?v=3",
+      "profile": "http://broken-kami.tumblr.com",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
