--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -24,6 +24,13 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "Demonstrandum",
+      "name": "Sam",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/26842759?v=3",
+      "profile": "https://github.com/Demonstrandum",
+      "contributions": []
     }
   ]
 }
