--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -30,7 +30,9 @@
       "name": "Sam",
       "avatar_url": "https://avatars2.githubusercontent.com/u/26842759?v=3",
       "profile": "https://github.com/Demonstrandum",
-      "contributions": []
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
