Add @reiswindy as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -33,6 +33,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "reiswindy",
+      "name": "reiswindy",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/11876110?v=4",
+      "profile": "https://github.com/reiswindy",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
