--- a/shard.yml
+++ b/shard.yml
@@ -1,12 +1,7 @@
 name: stumpy_core
 version: 1.9.0
-
+license: MIT
 authors:
   - Leon Rische <hello@l3kn.de>
 
-development_dependencies:
-  minitest:
-    git: https://github.com/ysbaddaden/minitest.cr.git
-    version: ~> 0.3.5
-
-license: MIT
+crystal: "< 2.0.0"
